# phone-number-classifier

./: .bazelrc  .gitattributes  .gitignore  BUILD  GenTestRules.bzl  README.md  WORKSPACE.bazel  pom.xml
client-api/: BUILD  README.md  pom.xml
client-api/src/main/java/net/goui/phonenumber/: AbstractPhoneNumberClassifier.java  DigitSequence.java  DigitSequenceEncoder.java  FormatType.java  LengthResult.java  MatchResult.java  PhoneNumber.java  PhoneNumberFormatter.java  PhoneNumberParser.java  PhoneNumberRegions.java  PhoneNumberResult.java  PhoneNumbers.java  TypeClassifier.java
client-api/src/main/java/net/goui/phonenumber/metadata/: ClassifierLoader.java  ClassifierService.java  ErrorOr.java  ParserData.java  RawClassifier.java  VersionInfo.java
client-api/src/main/java/net/goui/phonenumbers/: AbstractPhoneNumberClassifier.java  DigitSequence.java  DigitSequenceEncoder.java  FormatType.java  LengthResult.java  MatchResult.java  PhoneNumber.java  PhoneNumberFormatter.java  PhoneNumberParser.java  PhoneNumberResult.java  PhoneNumbers.java  TypeClassifier.java
client-api/src/main/java/net/goui/phonenumbers/metadata/: ClassifierLoader.java  ClassifierService.java  ErrorOr.java  ParserData.java  RawClassifier.java  VersionInfo.java
client-api/src/test/java/net/goui/phonenumber/: DigitSequenceEncoderTest.java  DigitSequenceTest.java  E164PhoneNumbersTest.java  PhoneNumbersTest.java
client-api/src/test/java/net/goui/phonenumbers/: DigitSequenceEncoderTest.java  DigitSequenceTest.java  PhoneNumbersTest.java
examples/: BUILD  README.md  pom.xml
examples/src/main/java/net/goui/phonenumbers/examples/: ClassifierDemo.java  ExampleClassifier.java  ExampleTool.java  LibPhoneNumberExample.java  (+5 more)
examples/src/main/resources/: README.md  dfa_smallest.pb  dfa_smallest.textproto  lpn_dfa_compact.pb  lpn_dfa_compact.textproto  lpn_dfa_precise.pb  lpn_dfa_precise.textproto  lpn_dfa_tiny.pb  lpn_dfa_tiny.textproto  lpn_regex_compact.pb  lpn_regex_compact.textproto  simple_dfa_minimal.pb  simple_dfa_minimal.textproto  validation_only.pb  validation_only.textproto
examples/src/test/resources/: lpn_golden_data.json  simple_golden_data.json
javascript/: .gitignore  README.md  package.json  tsconfig.json
javascript-simple/: .gitignore  package.json  tsconfig.json
javascript-simple/src/: index.ts  main.cjs  simple_compact.json  simple_compact.textproto  tsconfig.json
javascript/src/: converter.ts  digit-sequence-matcher.ts  digit-sequence.ts  index.ts  internal.ts  match-results.ts  metadata-json.ts  phone-number-classifier.ts  phone-number-formatter.ts  phone-number-parser.ts  phone-number-regions.ts  phone-number.ts  raw-classifier.ts  tsconfig.json
javascript/tests/: example-classifier.ts  index.test.ts  lpn_dfa_compact.json  lpn_dfa_compact.textproto  lpn_golden_data.json  phone_widget.textproto  tsconfig.json
metadata-loader/: BUILD  README.md  pom.xml
metadata-loader/src/test/resources/: test_metadata.pb  test_metadata.textproto
metadata-proto/: BUILD  README.md  pom.xml
metadata-proto/src/main/protobuf/: metadata.proto
offline-tools/: BUILD  README.md  example_metadata_config.textproto  pom.xml
offline-tools/src/main/protobuf/: config.proto
offline-tools/src/main/resources/metadata/: README.txt  metadata.csv
offline-tools/src/main/resources/metadata/241/: examples.csv  formats.csv  ranges.csv
offline-tools/src/main/resources/metadata/52/: formats.csv  ranges.csv
offline-tools/src/main/resources/metadata/54/: README.txt  formats.csv  ranges.csv
testing/: BUILD  pom.xml
(+78 files in other folders)
