load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_JVM_EXTERNAL_TAG = "4.5"

RULES_JVM_EXTERNAL_SHA = "b17d7388feb9bfa7f2fa09031b32707df529f26c91ab9e5d909eb1676badd9a6"

http_archive(
    name = "rules_jvm_external",
    sha256 = RULES_JVM_EXTERNAL_SHA,
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:repositories.bzl", "rules_jvm_external_deps")

rules_jvm_external_deps()

load("@rules_jvm_external//:setup.bzl", "rules_jvm_external_setup")

rules_jvm_external_setup()

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        # https://mvnrepository.com/artifact/com.googlecode.libphonenumber/libphonenumber
        "com.google.i18n.libphonenumber:metadata:1.0-SNAPSHOT",
        "com.googlecode.libphonenumber:libphonenumber:8.13.16",
        # https://mvnrepository.com/artifact/com.google.guava/guava
        "com.google.guava:guava:31.1-jre",
        # https://mvnrepository.com/artifact/com.google.auto.value/auto-value
        "com.google.auto.value:auto-value:1.10.1",
        # https://mvnrepository.com/artifact/com.google.auto.value/auto-value-annotations
        "com.google.auto.value:auto-value-annotations:1.10.1",
        # https://mvnrepository.com/artifact/com.google.auto.service/auto-service
        "com.google.auto.service:auto-service:1.0.1",
        # https://mvnrepository.com/artifact/junit/junit
        "junit:junit:4.13.2",
        # https://mvnrepository.com/artifact/com.google.truth/truth
        "com.google.truth:truth:1.1.3",
        # https://mvnrepository.com/artifact/com.google.truth.extensions/truth-java8-extension
        "com.google.truth.extensions:truth-java8-extension:1.1.3",
        # https://mvnrepository.com/artifact/com.ibm.icu/icu4j
        "com.ibm.icu:icu4j:73.2",
        # https://mvnrepository.com/artifact/com.beust/jcommander
        "com.beust:jcommander:1.82",
        # https://mvnrepository.com/artifact/org.typemeta/funcj-json
        "org.typemeta:funcj-json:0.6.18",
        # https://mvnrepository.com/artifact/com.google.flogger/flogger
        "com.google.flogger:flogger:0.7.4",
        # https://mvnrepository.com/artifact/com.google.flogger/flogger-system-backend
        "com.google.flogger:flogger-system-backend:0.7.4",
        # https://mvnrepository.com/artifact/com.google.flogger/flogger-grpc-context
        "com.google.flogger:flogger-grpc-context:0.7.4",
        # https://mvnrepository.com/artifact/io.grpc/grpc-context
        "io.grpc:grpc-context:1.2.0",
    ],
    fail_on_missing_checksum = False,
    fetch_sources = True,
    repositories = [
        "m2local",
        # "https://maven.google.com",
        # "https://repo1.maven.org/maven2",
    ],
)

# Protocol buffers [https://github.com/bazelbuild/rules_proto/releases]
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "rules_proto",
    sha256 = "dc3fb206a2cb3441b485eb1e423165b231235a1ea9b031b4433cf7bc1fa460dd",
    strip_prefix = "rules_proto-5.3.0-21.7",
    urls = [
        "https://github.com/bazelbuild/rules_proto/archive/refs/tags/5.3.0-21.7.tar.gz",
    ],
)

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")

rules_proto_dependencies()

rules_proto_toolchains()
